...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          tabBarButtonTestID: "tab-home",
          title: t("tabs.home", "Home"),
          tabBarIcon: ({ focused, size }) => (
            <Home
              color={focused ? "$primaryText" : "$text"}
              fill={focused ? theme.primaryText?.val : "none"}
              opacity={focused ? 1 : 0.55}
...
        }}
      />

      <Tabs.Screen
        name="journal"
        options={{
          tabBarButtonTestID: "tab-journal",
          title: t("tabs.journal", "Journal"),
          tabBarIcon: ({ focused, size }) => (
            <Scroll
              color={focused ? "$primaryText" : "$text"}
              fill={focused ? theme.primaryText?.val : "none"}
              opacity={focused ? 1 : 0.55}
...
